// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsContainer snapshot should match snapshot1 1`] = `
<ResultsPane>
  <div
    className="result-filter result-filter--nodata"
  />
</ResultsPane>
`;

exports[`ResultsContainer snapshot should match snapshot2 1`] = `
<ResultsPane
  isData={false}
>
  <div
    className="result-filter result-filter--nodata"
  />
</ResultsPane>
`;
